src/styles.css
/* ... */
.card-content .btn-card:hover {
    display: inline-block;
    padding: 8px 16px;
    background-color: white;
    text-decoration: none;
    border-radius: 20px;
    margin-top: 16px;
    color:red;
    border:3px solid rgb(255, 0, 0);
}
.icons-container-projects{
    margin:0;
    padding:0;
    color:rgb(20,20,20);
    display:flex;
    gap:0.7rem;
}
.icons-container-projects i{
    font-size:1.3em;
}
/* EXPERIENCE PAGE */
.experiencesPage {
    margin: 0;
    font-family: sans-serif;
    color: black;
    padding: 2em;
}

.experiencePage * {
    margin: 0;
    padding: 0;
}

.experiencePage-title {
    text-align: center;
    margin-top:45px;
    font-size: 1.4em;
    color:rgb(20,20,20)
}

.experiencePage-title p {
    font-size: 1.3em;
    letter-spacing: 2px;
}

.experiencePage h1 {
    margin: 0.3em;
    font-size: 3em;
}

.experiencePage h2 {
    margin-bottom: 0.5em;
}

.timeline {
    margin: 5em auto;
    max-width: 34.15em;
}

.checkpoint {
    max-width: 34em;
    padding-top: 2em;
    padding-bottom: 2em;
    position: relative;
    color:rgb(20, 20, 20);
}

.checkpoint div {
    border: 2px solid rgb(20,20,20);
    border-radius: 1em;
    padding: 1.5em;
}

.checkpoint p {
    line-height: 27px;
    color: rgb(30,30,30);
}

.checkpoint:nth-child(odd) {
    border-left: 3px solid rgb(20,20,20);
    padding-left: 3em;
    transform: translateX(17em);
}

.checkpoint:nth-child(even) {
    border-right: 3px solid rgb(20,20,20);
    padding-right: 3em;
    transform: translateX(-17em);
}

.checkpoint:nth-child(even)::before,
.checkpoint:nth-child(odd)::before {
    content: '';
    background: rgb(20,20,20);
    width: 3em;
    height: 3px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

.checkpoint:nth-child(odd)::before {
    left: 0;
}

.checkpoint:nth-child(even)::before {
    right: 0;
}

.checkpoint:nth-child(odd) div::before,
.checkpoint:nth-child(even) div::before {
    content: '';
    background: rgb(20, 20, 20);
    box-shadow: 0 0 0.5em #777;
    width: 0.8em;
    height: 0.8em;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    border-radius: 50%
}

.checkpoint:nth-child(odd) div::before {
    left: -0.5em;
}

.checkpoint:nth-child(even) div::before {
    right: -0.5em;
}
/*PROJECTS PAGES*/
.projects-Pages {
    margin: 0;
    font-family: sans-serif;
    color: rgb(20,20,20);
    padding:2em;
    text-align: justify;
}
.projects-Pages-title {
    text-align: center;
    margin-top:45px;
    font-size: 1.4em;
    margin-bottom:60px;
    color:rgb(20,20,20)
}
.projects-Pages p{
    padding:0 105px;
}
.projects-Pages-content p::first-letter{
    font-size: 2rem;
    color: red;
    font-weight: bold;
    letter-spacing: 4px;
}
.project-Pages-Photos-Container{
    padding: 0 105px;
    text-align: center;
}
.project-Pages-Photos-Container img{
    height:400px;
    margin: 70px 20px;
    max-width: 400px;
}
.project-Pages-Photos-Container video{
    height:300px;
    width:100%;
    margin-top:70px;
}
/* MOBILE VIEW */
@media (max-width:1150px) {
    .footerr {
        display: flex;
        justify-content: center;
        text-align: center;
    }

    .footerNav ul {
        flex-direction: column;
    }

    .footerNav ul li {
        width: 100%;
        text-align: center;
        margin: 10px 0;
    }
    .header-text h1 {
        font-size: 55px;
        margin-top: 0;
        margin-bottom: 0;
        padding:0;
        justify-content: center;
        letter-spacing: 2px;
    }
    .header-text h2 {
        font-size: 18px;
    }
    .profile-image {
        width:120px;
    }
    .desc-container {
        padding: 0 65px;
    }
    .mycontacts-icons{
        gap:20px;
    }
    .timeline {
        width: 80vw;
    }

    .timeline .checkpoint {
        width: 100%;
        transform: none;
        padding-left: 0;
        padding-right: 0;
        border: none;
    }

    .timeline .checkpoint::before {
        width: 3px;
        height: 4em;
        top: -2em;
        left: 50%;
        transform: translateX(-50%);
    }

    .timeline .checkpoint div::before {
        top: -0.5em;
        left: 50%;
        transform: translateX(-50%);
    }
    .projects-Pages p{
        padding:0 30px;
    }
    .project-Pages-Photos-Container{
        padding: 0;
        align-items: center;
        justify-content: center;
    }
    .project-Pages-Photos-Container img{
        width: 40vh;
        height: auto;
    }
}

